ISSUE #142 - Added oculus plugin

--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -35,7 +35,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript", src='/public/dist/three_d_repo.min.js')
 
 		// Plugin JS Files
-		each val in pluginJS
+		//each val in pluginJS
 			script(type="text/javascript", src=val)
 
 		// Plugin Angular Files
