--- a/frontend/bid4free/jade/bid4free.jade
+++ b/frontend/bid4free/jade/bid4free.jade
@@ -182,4 +182,4 @@
 							p {{vm.statusInfo}}
 
 div(ng-if="vm.state.bid4freeWorkspace" layout-fill)
-	bid4free-workspace(package-name="vm.selectedPackageName" account="vm.account" project="vm.project")
+	bid4free-workspace(package-name="vm.selectedPackageName" account="vm.account" project="vm.project" branch="vm.branch" revision="vm.revision")
