--- a/frontend/bid4free/jade/bidDocs.jade
+++ b/frontend/bid4free/jade/bidDocs.jade
@@ -11,7 +11,7 @@
 				p {{doc.title}}
 
 		md-list(ng-if="vm.bidInviteAccepted")
-			md-list-item(ng-repeat="doc in vm.docs", ng-click="vm.showDocDialog($index)", aria-label="Doc")
+			md-list-item.md-1-line(ng-repeat="doc in vm.docs", ng-click="vm.showDocDialog($index)", aria-label="Doc")
 				md-icon(class="fa fa-file-pdf-o")
 				p {{doc.title}}
 
