--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -11,5 +11,5 @@
 					md-list-item.md-1-line(ng-repeat="project in account.projects", ng-click="vm.goToProject(account.name, project)")
 						md-icon(md-font-icon="fa fa-cube")
 						p {{project}}
-						md-button.md-accent(ng-click="vm.b4f(account.name, project)") B4F
+						md-button.md-accent(ng-click="vm.b4f(account.name, project)" ng-if="vm.bif4FreeEnabled") B4F
 			md-divider
