--- a/frontend/bid4free/jade/bidWorkspace.jade
+++ b/frontend/bid4free/jade/bidWorkspace.jade
@@ -4,7 +4,7 @@
 			h2
 				span Workspace
 
-	md-content.bidInfoCardContent(layout="column", flex layout-padding, ng-if="vm.showItems")
+	md-content.bidInfoCardContent(layout="column", flex ng-if="vm.showItems")
 		md-list
-			md-list-item(ng-repeat="item in vm.items", ng-click="vm.showInput($index)")
+			md-list-item.md-1-line(ng-repeat="item in vm.items", ng-click="vm.showInput($index)")
 				p(flex) {{item}}
