--- a/frontend/bid4freeWorkspace/css/bid4freeWorkspace.sass
+++ b/frontend/bid4freeWorkspace/css/bid4freeWorkspace.sass
@@ -39,7 +39,7 @@ bid4free-workspace
   .sectionInput > md-radio-group,
   .itemInput > label,
   .itemInput > md-radio-group
-    padding-right: 40px
+    font-size: 16px
 
   // ** Terms and Conditions ******************************************************************************************/
   .sectionInput
@@ -76,7 +76,7 @@ bid4free-workspace
   .items label
     font-weight: normal
     color: rgba(0, 0, 0, 0.5)
-    padding: 10px 0 10px 0
+    font-size: 14px
 
   .addNewItem
     margin-bottom: 20px
