--- a/frontend/panel/jade/panelCard.jade
+++ b/frontend/panel/jade/panelCard.jade
@@ -11,7 +11,7 @@ div(layout="column", class="md-whiteframe-1dp")
 			#options
 
 	// Card content
-	.panelCardContainer
+	#panelCardContainer
 		// Filter
 		#filterContainer
 
@@ -23,4 +23,3 @@ div(layout="column", class="md-whiteframe-1dp")
 		md-button.md-fab.md-mini#helpButton(aria-label="Help")
 			md-icon(md-font-icon="fa-question", class="fa")
 			md-tooltip(md-direction="top") {{vm.contentData.help}}
-z
