ISSUE #194 - ng-switch between items

--- a/frontend/groups/css/groups.css
+++ b/frontend/groups/css/groups.css
@@ -18,3 +18,11 @@ groups .groupColourBar {
   background: green;
   width: 10px;
 }
+
+groups #groupHeader {
+  height: 56px;
+}
+
+groups #groupHeader p {
+  margin: 19px 20px;
+}
