--- a/frontend/clip/jade/clip.jade
+++ b/frontend/clip/jade/clip.jade
@@ -1,7 +1,7 @@
 div(layout="column" layout-align="start center" flex)
-	div(layout="row" layout-align="space-between" flex)
-		label(flex="10") Axis:
-		md-radio-group(ng-model="vm.selectedAxis" flex="85" layout="row")
+	div(layout="row" flex)
+		label#clipAxislabel(flex="20") Axis:
+		md-radio-group(ng-model="vm.selectedAxis" flex="75" layout="row")
 			md-radio-button(ng-repeat="axis in vm.axes", value="{{axis}}", ng-disabled="!vm.visible") {{axis}}
 
 	.clipSlider
