ISSUE #194 - Reset fronted to load min JS file

--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -32,7 +32,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		// Plugin JS and Angular files
 		//script(type="text/javascript", src='/public/dist/plugins.min.js')
-		script(type="text/javascript", src='/public/dist/three_d_repo.js')
+		script(type="text/javascript", src='/public/dist/three_d_repo.min.js')
 
 		// Plugin JS Files
 		//each val in pluginJS
