--- a/frontend/panel/jade/panelCard.jade
+++ b/frontend/panel/jade/panelCard.jade
@@ -1,7 +1,7 @@
 div(layout="column", class="md-whiteframe-1dp")
 
 	// Tool bar
-	md-toolbar(class="md-primary", ng-click="vm.toolbarClick()")
+	md-toolbar(class="md-primary")
 		div(class="md-toolbar-tools")
 			span.statusIcon(class="fa", ng-class="vm.statusIcon", ng-click="vm.hideItem()")
 			label(class="md-flex") {{vm.contentData.title}}
