--- a/frontend/panel/jade/panelCard.jade
+++ b/frontend/panel/jade/panelCard.jade
@@ -1,10 +1,12 @@
 div(layout="column", class="md-whiteframe-1dp")
 
 	// Tool bar
-	md-toolbar(class="md-primary")
-		div(class="md-toolbar-tools")
-			span.statusIcon(class="fa", ng-class="vm.statusIcon", ng-click="vm.hideItem()")
-			label(class="md-flex") {{vm.contentData.title}}
+	md-toolbar(class="md-primary" flex)
+		div(class="md-toolbar-tools" flex)
+			span.statusIcon(class="fa", ng-class="vm.statusIcon", ng-click="vm.hideItem()" flex="none")
+			span(ng-if="!vm.showFilter" flex="50")
+				label(class="md-flex") {{vm.contentData.title}}
+			#filterContainer
 			span(flex)
 
 			// Options
@@ -13,7 +15,7 @@ div(layout="column", class="md-whiteframe-1dp")
 	// Card content
 	#panelCardContainer
 		// Filter
-		#filterContainer
+		// #filterContainer
 
 		// Content
 		md-content(id="content", style="height:{{vm.contentData.height}}px")
