--- a/frontend/panel/jade/panelCardFilter.jade
+++ b/frontend/panel/jade/panelCardFilter.jade
@@ -1,7 +1,5 @@
-.panelCardFilter(ng-if="vm.showFilter", layout="row")
-	div(flex="85")
-		md-input-container(md-no-float="")
-			input(type="text", ng-model="vm.filterInputText", placeholder="Filter")
+.panelCardFilter(ng-if="vm.showFilter", layout="row" flex="80")
+	span(flex="100")
+		input(type="text", ng-model="vm.filterInputText" placeholder="Filter" flex="100")
 	div(flex="15", ng-if="vm.showClearFilterButton")
-		md-button.md-icon-button(ng-click="vm.clearFilter()", aria-label="Clear filter")
-			md-icon(md-font-icon="fa-times-circle", class="fa")
+		md-icon(md-font-icon="fa-times-circle" class="fa" ng-click="vm.clearFilter()")
