--- a/frontend/panel/jade/panelCardOptionMenu.jade
+++ b/frontend/panel/jade/panelCardOptionMenu.jade
@@ -4,8 +4,11 @@ md-menu(md-position-mode="target-right target", md-offset="2 14")
 	md-menu-content(width="4")
 		md-menu-item(ng-repeat="menuItem in vm.menu")
 			md-button(ng-click="vm.menuItemSelected($index)")
-				div(layout="row")
-					md-icon(md-font-icon="fa-check", class="fa", ng-if="menuItem.selected")
-					p(flex="") {{menuItem.label}}
-					md-icon(md-font-icon="{{menuItem.firstSelectedIcon}}", class="fa", ng-if="menuItem.firstSelected")
-					md-icon(md-font-icon="{{menuItem.secondSelectedIcon}}", class="fa", ng-if="menuItem.secondSelected")
+				div(layout="column" flex)
+					div(layout="row" flex)
+						md-icon(md-font-icon="{{menuItem.icon}}", class="fa", ng-if="menuItem.noToggle")
+						md-icon(md-font-icon="fa-check", class="fa", ng-if="menuItem.selected")
+						p(flex="") {{menuItem.label}}
+						md-icon(md-font-icon="{{menuItem.firstSelectedIcon}}", class="fa", ng-if="menuItem.firstSelected")
+						md-icon(md-font-icon="{{menuItem.secondSelectedIcon}}", class="fa", ng-if="menuItem.secondSelected")
+					md-divider(ng-if="menuItem.divider" flex)
