ISSUE #196 - Fixed account image

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -98,6 +98,11 @@ account-profile p {
   color: rgba(0,0,0,0.6);
 }
 
+/** Avatar Image *****************************************************************************************************/
+.account-avatar-image {
+	width: 100%;
+}
+
 /** Logout button *****************************************************************************************************/
 logout {
   position: absolute;
