--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -5,7 +5,7 @@ div(ng-if="!vm.state.project")
 			#logo(flex="15", layout="row", layout-align="center center")
 				img(src="/public/images/3drepo-logo-white.png", flex="70")
 			div(layout="row", flex="40")
-				img(ng-if="vm.hasAvatar", ng-src='{{vm.avatarURL}}')
+				img.account-avatar-image(ng-if="vm.hasAvatar", ng-src='{{vm.avatarURL}}')
 				#noAvatarIcon(flex, layout="row")
 					md-icon(ng-if="!vm.hasAvatar", class="fa fa-user")
 			#userinfo(layout="column")
