ISSUE #194 - Hiding showing groups added

--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -15,7 +15,7 @@ div(ng-if="!vm.state.project")
 		span(flex="5")
 		md-tabs(md-border-bottom, flex="50")
 			md-tab#accountProjectsTab(label="Projects")
-				account-projects(flex projects-grouped='vm.projectsGrouped')
+				account-projects(flex account="vm.account" projects-grouped='vm.projectsGrouped')
 			md-tab(label="Profile")
 				account-profile(username="vm.username" first-name="vm.firstName" last-name="vm.lastName" email="vm.email")
 div(ng-if="vm.state.project")
