--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -138,7 +138,6 @@ issue-header p {
 }
 
 issue-header .issueTitle {
-  margin-left: 35px;
   outline: none;
 }
 
@@ -155,17 +154,13 @@ issue-header .issueTitle button {
   height: 100%;
 }
 issue-header .issueRoleMarkers {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 10px;
-  height: 100%;
 }
 
 issue-header .issueStatusMarker {
-  position: absolute;
-  top: 10px;
-  left: 16px;
+  margin-top: 10px;
+  margin-left: 6px;
+  width: 20px;
 }
 issue-header .issueStatusMarker .issueOpen {
   color: #4CAF50;
