--- a/frontend/issues/jade/issueHeader.jade
+++ b/frontend/issues/jade/issueHeader.jade
@@ -1,17 +1,17 @@
-.issueTitle(ng-click="vm.click()")
+.issueTitle(ng-click="vm.click()" layout="row" layout-align="start" flex)
+	.issueRoleMarkers(layout="column" flex="none")
+		div(ng-repeat="roleColor in vm.issueData.assignedRolesColors", style="background:{{roleColor}};" flex)
+
+	.issueStatusMarker(flex="none")
+		md-icon(class="fa fa-circle-o issueOpen" ng-if="!vm.issueData.closed")
+		md-icon(class="fa fa-circle-o issueClosed" ng-if="vm.issueData.closed")
+
 	.issueHeaderText(layout="column" flex)
 		p {{vm.issueData.title}}
 		.issueTitleInfo(layout="row" layout-align="start")
 			p(flex="60") {{vm.issueData.owner}}
-			span(flex="25" layout="row" layout-align="end")
+			span(flex="35" layout="row" layout-align="end")
 				p {{vm.issueData.timeStamp}}
-
-.issueRoleMarkers(layout="column")
-	div(ng-repeat="roleColor in vm.issueData.assignedRolesColors", style="background:{{roleColor}};", flex)
-
-.issueStatusMarker
-	md-icon(class="fa fa-circle-o issueOpen" ng-if="!vm.issueData.closed")
-	md-icon(class="fa fa-circle-o issueClosed" ng-if="vm.issueData.closed")
 
 .issueInfo(ng-if="vm.issueData.showInfo", layout="row" layout-align="start center")
 	div(flex)
